@@ -10,13 +10,13 @@ gedit 0.9.1
     and set this OFF by default. Multiple views confuse newbie users
 
 ** Roberto **
-[ ] Make the information toolbar button more informative 
 
 ** Unclaimed **
 [ ] Rewrite the browse plugin
      [ ]The error reporting on the browse plugin is VERY bad, fix
      [ ] Make the browse plugin non-blocking
 [ ] Regex searching
+[ ] Write an HTML viewer plugin.
 
 ---------------------------------------------------------------------
   gedit 0.9.0
@@ -110,6 +110,7 @@ gedit 0.9.1
 [X] If the doc is untitled, set the "Revert" sensitivity to off.
 [X] Add to the diff plugin the ability to make the diff from
     an open document in gedit.
+[X] Fix the speed problems with poorly written themes
 
 ** Eric **
 [X] New Documentation
@@ -117,6 +118,7 @@ gedit 0.9.1
 ** Roberto **
 [X] Insert Shell Output plugin
 [X] Reverse plugin
+[X] Make the information toolbar button more informative 
 
 ----------------------------------------------------------------------
   gedit 0.7.9
