@@ -1,3 +1,8 @@
+2000-07-05  Chema Celorio  <chema@celorio.com>
+
+	* view.c (gedit_view_init): try to fix the speed problems with sucky
+	themes. I think they are gone, but we need to verify it.
+
 2000-07-02    <phoenix@nova.es>
 
 	* search.c (count_lines_cb): This function is reform . add file_info ()
